--- a/website/templates/admin/home.html
+++ b/website/templates/admin/home.html
@@ -3,7 +3,90 @@
 {% block pagename %}
     Dashboard
 {% endblock %}
-{% block button %}
-{% endblock %}
 {% block content %}
+    <script>
+        $(document).ready(function(){
+            $('select').on('change', function(event ) {
+                var prevValue = $(this).data('previous');
+            $('select').not(this).find('option[value="'+prevValue+'"]').show();    
+                var value = $(this).val();
+            $(this).data('previous',value); $('select').not(this).find('option[value="'+value+'"]').hide();
+            });
+        });
+
+		$(document).ready(function(){
+            $('select').on('click', function(event ) {
+                var prevValue = $(this).data('previous');
+            $('select').not(this).find('option[value="'+prevValue+'"]').show();    
+                var value = $(this).val();
+            $(this).data('previous',value); $('select').not(this).find('option[value="'+value+'"]').hide();
+            });
+        });
+    </script>
+    <div class='display_grid'>
+        {% set today = [] %}
+        {% set incoming = [] %}
+        {% set today = [] %}
+        <h1>Today</h1>
+        {% if defenses %}
+            {% for defense in defenses %}
+                {% if today == defense.start_date.date() %}
+                    <div class='div1'>
+                        <table class = "">
+                            <tr>
+                                <th>
+                                    ID:
+                                </th>
+                                <td colspan = "3"> 
+                                    {{ defense.id }}
+                                </td>
+                            </tr>
+                            <tr>
+                                <th>
+                                    Group Name:
+                                </th>
+                                <td colspan = "3"> 
+                                    {{ defense.group.name }} 
+                                </td>
+                            </tr>
+                            <tr>
+                                <th colspan = "4">Panels:</th>
+                            </tr>
+                            <tr>
+                                {% for panel in defense.panels %}
+                                    {% if panel.id == defense.head_panel_id: %}
+                                        <th class = "no_border"> Head Panelist </th>
+                                        <td colspan = "3">{{ panel.last_name }}, {{ panel.first_name }} {{ panel.middle_in }}. </td><tr>
+                                    {% else: %}
+                                        <th class = "no_border"> Co-Panelist </th>
+                                        <td colspan = "3">{{ panel.last_name }}, {{ panel.first_name }} {{ panel.middle_in }}.</td><tr>
+                                    {% endif %}
+                                {% endfor %}
+                            </tr>
+                            <tr>
+                                <th>Defense Date:</th>
+                                <td colspan = "3">{{ defense.start_date.strftime('%B %d, %Y - %I:%M %p') }}</td>
+                                            
+                            </tr>
+                        </table>
+                        <table class = "tableButton no_border">
+                            <th class = "no_border sep_10">
+                                <a href="/grade_summary/{{ defense.id }}">
+                                    <button class = "but2" >Grade Summary</button>
+                                </a>
+                            </th>
+                            <th class = "no_border sep_10">
+                                <a href="/comment_summary/{{ defense.id }}">
+                                    <button class = "but2" >Comment Summary</button>
+                                </a>
+                            </th>
+                        </table>
+                        <br>
+                    </div>
+                {% endif %}
+
+                
+            {% endfor %}
+        {% endif %}
+    </div>
 {% endblock %}
