--- a/website/static/admin/new_style.css
+++ b/website/static/admin/new_style.css
@@ -1,14 +1,12 @@
-:root {
-    
-}
-
+@import url('https://fonts.googleapis.com/css2?family=Inter&family=Roboto&display=swap');
 
 * {
     box-sizing: border-box;
+    letter-spacing: 2px;
 }
 
 body {
-    font-family: Arial;
+    font-family: Roboto;
     display: flex;
     margin: 0;
 }
@@ -261,8 +259,6 @@ input {
     width: 100%;
 }
 
-
-
 table{
 	margin-left: auto;
 	margin-right: auto;
@@ -359,20 +355,175 @@ td{
 }
 
 
-.but2{
-	padding: 0px;
-	width: 100%;
-	height: 100%;
-	border-radius: 0px;
-	background-color: white; 
-	color: black; 
-	background-color: #E0E0E0;
-	border: 2px solid #E0E0E0;
-	cursor: pointer;
+.display_grid .card {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    margin-bottom: 20px;
+    min-height: 200px;
+    box-shadow: 3px 3px 5px 2px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    height: 500px;
 }
 
-.but2:hover {
-	width: 100%;
-	height: 100%;
-	background-color: white;
+.display_grid .card .left {
+    position: relative;
+    width: 20%;
+    min-width: 300px;
+    background-color: #1b412c;
+    display: flex;
+    align-items: center;
+    /* justify-content: center; */
+    flex-direction: column;
+    border-radius: 10px 0px 0px 10px;
+    padding: 20px;
+    padding-top: 50px;
+    color: white;
+}
+
+.display_grid .card .left .panel_id {
+    padding: 8px;
+    background-color: #173826;
+    margin-bottom: 5px;
+    border-radius: 10px;
+}
+
+.center { 
+    text-align: center;
+}
+
+.card .left .panel_pic {
+    width: 100px;
+    border-radius: 50%;
+    margin-bottom: 10px;
+}
+
+.card .left .panel_name {
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.card .left .panel_user {
+    font-style: italic;
+    color: rgba(255, 255, 255, 0.685);
+}
+
+.card .left .panel_school {
+    margin-top: 50px;
+}
+
+.display_grid .card .right {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    background-color: rgb(247, 247, 247);
+    border-radius: 0px 10px 10px 0px;
+    padding: 20px;
+    padding-left: 40px;
+    padding-bottom: 40px;
+    overflow: auto;
+}
+
+.display_grid .card .title {
+    display: inline-flex;
+    height: 80px;
+    max-height: 80px;
+    top: 0;
+    position: sticky;
+    background: inherit;
+    padding: 20px;
+    padding-top: 0px;
+    flex-direction: row;
+    padding-right: 35px;
+}
+
+.display_grid .card .right .sched_container {
+    width: 100%;
+    padding:20px;
+    padding-right: 40px;
+    overflow: auto;
+}
+
+
+
+.display_grid .card .right .panel_sched {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    background-color: rgb(247, 247, 247);
+    border-bottom: 1px solid rgba(71, 71, 71, 0.404);
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+    overflow: auto;
+}
+
+.display_grid .card .right .sched_container .project_title {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.display_grid .card .right .sched_container .group_name {
+    font-size: 12px;
+    font-weight: bold;
+    color: rgba(0, 0, 0, 0.5);
+}
+
+.display_grid .card .right .sched_container .date {
+    margin-top: 20px;
+    font-size: 18px;
+    font-weight: bold;
+}
+.delete {
+    position: absolute;
+    z-index: 2;
+    right: 30px;
+    opacity: 0.50;
+    width: 40px;
+}
+
+.delete:hover {
+    opacity: 1;
+}
+
+.edit {
+    position: absolute;
+    z-index: 2;
+    right: 100px;
+    opacity: 0.50;
+    width: 40px;
+    
+}
+
+.edit:hover {
+    opacity: 1;
+}
+
+.delete_box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-width: 250px;
+    width: 20%;
+    min-height: 200px;
+    height: 15%;
+    background-color: rgb(240, 239, 239);
+    gap: 10px;
+    font-size: 40px;
+    border-radius: 2px;
+}
+
+.delete_box button {
+    font-size: 30px;
+    width: 100;
+}
+
+.delete_box button:hover {
+    font-size: 30px;
+    width: 100;
+    background-color: #48504c;
+    border-radius:
 }
