--- a/website/static/admin/new_style.css
+++ b/website/static/admin/new_style.css
@@ -12,7 +12,8 @@ body {
 }
 
 nav {
-    width: 20%;
+    min-width: 300px;
+    max-width: 300px;
     height: 100vh;
     top: 0; /* this is required for "sticky" to work */
     position: sticky;
@@ -53,7 +54,7 @@ nav .top .profile_info .username {
 
 nav .top .profile_info .position {
     margin: 0px;
-    font-size: 20px;
+    font-size: 15px;
 }
 
 nav .bottom {
@@ -178,7 +179,7 @@ input {
     right: 0;
     bottom: 0;
     background-color: rgba(0,0,0,0.5);
-    z-index: 2;
+    z-index: 5;
     cursor: pointer;
     align-items: center;
     justify-content: center;
@@ -506,24 +507,123 @@ td{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-width: 250px;
-    width: 20%;
-    min-height: 200px;
-    height: 15%;
+    min-width: 350px;
+    width: 25%;
+    min-height: 400px;
+    height: 30%;
     background-color: rgb(240, 239, 239);
     gap: 10px;
-    font-size: 40px;
     border-radius: 2px;
+    padding: 20px;
+}
+
+.delete_box .buttons_div {
+    display: flex;
+    gap: 30px;
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 20px;
+    height: 100%;
+}
+
+
+.delete_box .question_text {
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 20px;
 }
 
 .delete_box button {
-    font-size: 30px;
-    width: 100;
+    font-size: 20px;
+    width: 100px;
+    height: 100%;
+    border: 1px solid;
+    border-radius: 2px;
 }
 
 .delete_box button:hover {
+    background-color: #deeed8;
+}
+
+.delete_box .alert_pic {
+    width: 100px;
+}
+
+
+.student_grid {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    gap: 30px;
+}
+
+.student_card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 25%;
+    margin-bottom: 20px;
+    min-height: 200px;
+    box-shadow: 3px 3px 5px 2px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    height: 500px;
+    padding: 30px;
+    padding-top: 50px;
+    border-top: 10px solid #173826
+}
+
+.student_card .stud_info {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-bottom: 1px solid gray;
+    padding-bottom: 30px;
+}
+
+.student_card .pic_div {
+    margin-bottom: 20px;
+}
+
+
+.student_card .student_pic {
+    width: 130px;
+    border-radius: 50%;
+    box-shadow: 3px 3px 5px 2px rgba(0, 0, 0, 0.1);
+
+}
+
+.student_card .student_name {
+    width: 80%;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.student_card .student_name .lastname_div {
     font-size: 30px;
-    width: 100;
-    background-color: #48504c;
-    border-radius:
+    font-weight: bold;
+}
+
+.student_card .student_name .firstname_div {
+    font-size: 19px;
+}
+
+.student_card .student_no {
+    font-size: 19px;
+    color: rgb(36, 35, 35);
+}
+
+.student_card .group_info {
+    display: inherit;
+    flex-direction: column;
+    flex-direction: column;
+    align-items: center;
+}
+
+.student_card .group_info .groupname_div {
+    font-size: 25px;
+    font-weight: bold;
+    color:#173826;
 }
