--- a/website/templates/admin/admin.html
+++ b/website/templates/admin/admin.html
@@ -11,7 +11,7 @@
                 <img src="{{ url_for('static', filename ='img_avatar.png') }}" alt="..." width="65" class="profile_pic">
             </div>
             <div class="profile_info">
-                <p class="username">ADMIN</p>
+                <p class="username"><b>ADMIN</b></p>
                 <p class="position">Admin</p>
             </div>
         </div>
