--- a/website/templates/admin/students/student.html
+++ b/website/templates/admin/students/student.html
@@ -1,48 +1,85 @@
 {% extends "admin.html" %}
 {% block title %}Home Page{% endblock %}
 {% block pagename %}
-
-Students
-
+	Students
 {% endblock %}
 {% block content %}
-    <div class='display_grid'>
-        {% if students %}
-            {% for student in students %}
-                <div class='div1'>
-					<table>
-						<tr>
-							<th class = "tb_desc">Student No.:</th>
-							<td>{{ student.stud_no }}</td>
-						</tr>
-						<tr>
-							<th class = "tb_desc">Name:</th> 
-							<td>{{ student.last_name }}, {{ student.first_name }} {{ student.middle_in }}.</td>
-						<tr>
-						<th class = "tb_desc">Group:</th> 
-						<td>{{ student.group_id }} - {{ student.group.name }}</td>
-						</tr>
-					</table>
-					<table class = "no_border">
-						<td class = "no_border sep_20">
-						<td class = "no_border sep_20">
-						<td class = "no_border sep_20">	
-						<th class = "no_border sep_10">
-							<a href="/edit_student/{{ student.stud_no }}">
-								<button class = "but2">Edit</button>
-							</a>
-						</th>
-						<th class = "no_border sep_10">
-							<a href="/delete_student/{{ student.stud_no }}">
-								<button class = "but2">Delete</button>
-							</a>
-						</th>
-						<tr>
-					</table>
-					<br>
-                </div>
-                
-            {% endfor %}
-        {% endif %}
-    </div>
+<style>
+	#student_ops {
+		position: absolute;
+		z-index: 2;
+		top: 2px;
+		right: -25px;
+	}
+
+	.imageBox {
+		position: relative;
+		float: left;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+
+	.imageBox .hoverImg {
+		position: absolute;
+		display: none;
+	}
+
+	.imageBox:hover .hoverImg {
+		display: block;
+	}
+
+</style>
+<div class='student_grid'>
+	{% if students %}
+		{% for student in students %}
+		<div class='student_card'>
+			<div id='student_ops'>
+				<a href="/delete_student/{{ student.stud_no }}">
+					<img src="{{ url_for('static', filename='delete.png') }}" alt="..." width="65" class="delete">
+				</a>	
+			</div>
+			
+			<div class='stud_info'>
+				<div class="imageBox">
+					<div class="imageInn">
+						<img src="{{ url_for('static', filename='img_avatar.png') }}" alt="..." width="65" class="student_pic">
+					</div>
+
+					<div class="hoverImg">
+						<a href="/edit_student/{{ student.stud_no }}">
+							<img src="{{ url_for('static', filename='edit.png') }}" alt="..." class="student_pic" style='width: 60px; opacity: 0.50'>
+						</a>
+						
+					</div>
+				</div>
+				<div class="pic_div">
+					<a href="/edit_student/{{ student.stud_no }}">
+					</a>
+				</div>
+				<div class='student_name'>
+					<div class='lastname_div'>
+						{{ student.last_name }}, 
+					</div>
+					<div class='firstname_div'>
+						{{ student.first_name }} {{ student.middle_in }}
+					</div>
+				</div>
+				<div class='student_no'>
+					{{ student.stud_no }}
+				</div>
+			</div>
+			<div class='group_info'>
+				<h5>Group</h5>
+				<div class='groupname_div'>
+					{{ student.group.name }}
+				</div>
+			</div>
+			
+		</div>
+			
+		{% endfor %}
+	{% endif %}
+</div>
+    
 {% endblock %}
